--- a/style.css
+++ b/style.css
@@ -26,3 +26,12 @@ br {
 .break-dot {
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 16px;
+        margin: 20%;
+        margin-top: 38.2%;
+        margin-bottom: 38.2%;
+    }
+}
